<resources>
    <string name="app_name">RunnerApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="geofence_transition_invalid_type">"GEOFENCE INVALID TYPE: "</string>
    <string name="previous_runs">Previous Runs</string>
    <string name="title_activity_running_list">RunningListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="delete_one_item">Delete one item</string>
    <string name="pace_d">Pace: %.2f km/minute</string>
    <string name="distance_f_km">Distance: %.2f km</string>
    <string name="time_d_d">Time: %s : %s</string>
    <string name="hello_blank_fragment">Are you sure you want to finish your run and save your data?</string>
    <string name="rundata_added">Save your Run</string>
    <string name="button_ok">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop_run">Stop Run</string>
    <string name="start_run">Start Run</string>
</resources>